PROJECT (cppnpv2)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

IF (DEFINED ENV{SSL_ROOT})
	IF (WIN32 AND NOT MINGW)
		SET (OPENSSL_INCLUDE_DIR $ENV{SSL_ROOT}/inc32)
		SET (OPENSSL_LIBRARY_DIR $ENV{SSL_ROOT}/out32dll)
		SET (OPENSSL_CRYPTO_LIBRARIES libeay32)
		SET (OPENSSL_SSL_LIBRARIES ssleay32)
	ELSE (WIN32 AND NOT MINGW)
		SET (OPENSSL_INCLUDE_DIR $ENV{SSL_ROOT}/include)
		SET (OPENSSL_LIBRARY_DIR $ENV{SSL_ROOT}/lib)
		SET (OPENSSL_CRYPTO_LIBRARIES crypto)
		SET (OPENSSL_SSL_LIBRARIES ssl)
	ENDIF (WIN32 AND NOT MINGW)
	SET (OPENSSL_LIBRARIES ${OPENSSL_CRYPTO_LIBRARIES} ${OPENSSL_SSL_LIBRARIES})
ELSE (DEFINED ENV{SSL_ROOT})
	FIND_PACKAGE (OpenSSL REQUIRED)
ENDIF (DEFINED ENV{SSL_ROOT})

INCLUDE (ace.cmake)
ADD_SUBDIRECTORY (ch03)
ADD_SUBDIRECTORY (ch04)
ADD_SUBDIRECTORY (ch05)
ADD_SUBDIRECTORY (ch06)
ADD_SUBDIRECTORY (ch07)
