PROJECT (cppnpv2_ch07)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

INCLUDE_DIRECTORIES(
	${ACE_INCLUDE_DIRS}
	${CMAKE_SOURCE_DIR}
)

LINK_DIRECTORIES(
	${ACE_LIBRARY_DIRS}
)

ADD_DEFINITIONS (${ACE_DEFINITIONS})
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ACE_C_FLAGS}")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ACE_CXX_FLAGS}")
SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ACE_LINK_FLAGS}")

SET (server_SOURCE_FILES server.cpp)
ADD_EXECUTABLE (server ${server_SOURCE_FILES})
TARGET_LINK_LIBRARIES (server ${ACE_LIBRARIES})

SET (client_SOURCE_FILES client.cpp)
ADD_EXECUTABLE (client ${client_SOURCE_FILES})
TARGET_LINK_LIBRARIES (client ${ACE_LIBRARIES})
