PROJECT (ace_internal_ch02)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

INCLUDE_DIRECTORIES(
	${ACE_INCLUDE_DIRS}
	${CMAKE_SOURCE_DIR}
)

LINK_DIRECTORIES(
	${ACE_LIBRARY_DIRS}
)

ADD_DEFINITIONS (${ACE_DEFINITIONS} -g)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ACE_C_FLAGS}")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ACE_CXX_FLAGS}")
SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ACE_LINK_FLAGS}")

SET (main_SOURCE_FILES main.cpp)
ADD_EXECUTABLE (main ${main_SOURCE_FILES})
TARGET_LINK_LIBRARIES (main ${ACE_LIBRARIES})

SET (this_SOURCE_FILES this_dll.cpp)
ADD_LIBRARY (this_dll SHARED ${this_SOURCE_FILES})
TARGET_LINK_LIBRARIES (this_dll ${ACE_LIBRARIES})

SET (that_SOURCE_FILES that_dll.cpp)
ADD_LIBRARY (that_dll SHARED ${that_SOURCE_FILES})
TARGET_LINK_LIBRARIES (that_dll ${ACE_LIBRARIES})

SET (this2_SOURCE_FILES this_dll2.cpp)
ADD_LIBRARY (this_dll2 SHARED ${this2_SOURCE_FILES})
TARGET_LINK_LIBRARIES (this_dll2 ${ACE_LIBRARIES})

SET (static_SOURCE_FILES static.cpp)
ADD_EXECUTABLE (static ${static_SOURCE_FILES})
TARGET_LINK_LIBRARIES (static ${ACE_LIBRARIES})
