PROJECT (cppnpv2_ch08)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

INCLUDE_DIRECTORIES(
	${ACE_INCLUDE_DIRS}
	${CMAKE_SOURCE_DIR}
)

LINK_DIRECTORIES(
	${ACE_LIBRARY_DIRS}
)

ADD_DEFINITIONS (${ACE_DEFINITIONS})
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ACE_C_FLAGS}")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ACE_CXX_FLAGS}")
SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ACE_LINK_FLAGS}")

ADD_DEFINITIONS (-DBUILD_AIO_CLD_DLL)
SET (aio_cld_SOURCE_FILES
	aio_cld_acceptor.cpp
	aio_cld_connector.cpp
	aio_client_logging_daemon.cpp
	aio_input_handler.cpp
	aio_output_handler.cpp)

ADD_LIBRARY (AIO_CLD SHARED ${aio_cld_SOURCE_FILES})
TARGET_LINK_LIBRARIES (AIO_CLD ${ACE_LIBRARIES})
