PROJECT (cppnpv2_ch09)
CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

INCLUDE_DIRECTORIES(
	${ACE_INCLUDE_DIRS}
	${CMAKE_SOURCE_DIR}
)

LINK_DIRECTORIES(
	${ACE_LIBRARY_DIRS}
)

ADD_DEFINITIONS (${ACE_DEFINITIONS} -g)
SET (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${ACE_C_FLAGS}")
SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${ACE_CXX_FLAGS}")
SET (CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${ACE_LINK_FLAGS}")

SET (logrec_SOURCE_FILES
	logrec_formatter.cpp
	logrec_main.cpp
	logrec_reader.cpp
	logrec_separator.cpp
	logrec_writer.cpp)

ADD_EXECUTABLE (logrec ${logrec_SOURCE_FILES})
TARGET_LINK_LIBRARIES (logrec ${ACE_LIBRARIES})
