cmake_minimum_required(VERSION 3.15)
project(ch04)

add_subdirectory(stockitems)
add_subdirectory(togglebuttons)
add_subdirectory(checkbuttons)
add_subdirectory(radiobuttons)
add_subdirectory(entries)
add_subdirectory(spinbuttons)
add_subdirectory(scales)
add_subdirectory(gtkrc)
add_subdirectory(colorbuttons)
add_subdirectory(filechooserbuttons)
add_subdirectory(fontbuttons)
