CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

IF (NOT DEFINED CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE Release)
ENDIF()

SET (CMAKE_INSTALL_PREFIX /)

ADD_SUBDIRECTORY (strategy)
ADD_SUBDIRECTORY (observer/weather)
ADD_SUBDIRECTORY (decorator/starbuzz)
ADD_SUBDIRECTORY (factory/pizzas)
ADD_SUBDIRECTORY (factory/pizzafm)
ADD_SUBDIRECTORY (factory/pizzaaf)
ADD_SUBDIRECTORY (singleton/chocolate)
