CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

IF (NOT DEFINED CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE Release)
ENDIF()

SET (BOOST_INCLUDE_DIRS $ENV{BOOST_ROOT})
SET (BOOST_LIBRARY_DIRS $ENV{BOOST_ROOT}/stage/lib)

SET (CMAKE_INSTALL_PREFIX /)

ADD_SUBDIRECTORY (strategy)
ADD_SUBDIRECTORY (observer/weather)
ADD_SUBDIRECTORY (decorator/starbuzz)
ADD_SUBDIRECTORY (factory/pizzas)
ADD_SUBDIRECTORY (factory/pizzafm)
ADD_SUBDIRECTORY (factory/pizzaaf)
ADD_SUBDIRECTORY (singleton/chocolate)
ADD_SUBDIRECTORY (singleton/dcl)
ADD_SUBDIRECTORY (singleton/stat)
ADD_SUBDIRECTORY (command/party)
ADD_SUBDIRECTORY (adapter/ducks)

