CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

IF (NOT DEFINED CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE Release)
ENDIF()

SET (BOOST_INCLUDE_DIRS $ENV{BOOST_ROOT})
SET (BOOST_LIBRARY_DIRS $ENV{BOOST_ROOT}/stage/lib)

SET (CMAKE_INSTALL_PREFIX /)

ADD_SUBDIRECTORY (strategy)
ADD_SUBDIRECTORY (observer/weather)
ADD_SUBDIRECTORY (decorator/starbuzz)
ADD_SUBDIRECTORY (factory/pizzas)
ADD_SUBDIRECTORY (factory/pizzafm)
ADD_SUBDIRECTORY (factory/pizzaaf)
ADD_SUBDIRECTORY (singleton/chocolate)
ADD_SUBDIRECTORY (singleton/dcl)
ADD_SUBDIRECTORY (singleton/stat)
ADD_SUBDIRECTORY (command/party)
ADD_SUBDIRECTORY (adapter/ducks)
ADD_SUBDIRECTORY (facade/hometheater)
ADD_SUBDIRECTORY (templatemethod/simplebarista)
ADD_SUBDIRECTORY (templatemethod/barista)
ADD_SUBDIRECTORY (templatemethod/sort)
ADD_SUBDIRECTORY (iterator/dinermerger)
ADD_SUBDIRECTORY (iterator/dinermergercafe)
ADD_SUBDIRECTORY (composite/menu)
ADD_SUBDIRECTORY (composite/menuiterator)
ADD_SUBDIRECTORY (state/gumball)
ADD_SUBDIRECTORY (state/gumballstate)
ADD_SUBDIRECTORY (state/gumballstatewinner)

