[package]
name = "multi_owner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dag"
path = "src/dag.rs"

[[bin]]
name = "refcell"
path = "src/refcell.rs"

[[bin]]
name = "dag_mut"
path = "src/dag_mut.rs"

[[bin]]
name = "rc"
path = "src/rc.rs"

[[bin]]
name = "exam1"
path = "src/exam1.rs"

[[bin]]
name = "exam2"
path = "src/exam2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
